// an attributed description
message AltDescription
 {
  optional source String = 1
  description String = 2
 }
// a tag/value pair with the semantics of OWL Annotation
message Annotation
 {
  tag Uriorcurie = 1
  value String = 2
  repeated extensions Extension = 3
  repeated annotations Annotation = 4
 }
// the definition of a class or interface
message ClassDefinition
 {
  name String = 1
  repeated idPrefixes Ncname = 2
  optional definitionUri Uriorcurie = 3
  repeated aliases String = 4
  repeated localNames LocalName = 5
  repeated mappings Uriorcurie = 6
  repeated exactMappings Uriorcurie = 7
  repeated closeMappings Uriorcurie = 8
  repeated relatedMappings Uriorcurie = 9
  repeated narrowMappings Uriorcurie = 10
  repeated broadMappings Uriorcurie = 11
  repeated extensions Extension = 12
  repeated annotations Annotation = 13
  optional description String = 14
  repeated altDescriptions AltDescription = 15
  optional deprecated String = 16
  repeated todos String = 17
  repeated notes String = 18
  repeated comments String = 19
  repeated examples Example = 20
  repeated inSubset SubsetDefinition = 21
  optional fromSchema Uri = 22
  optional importedFrom String = 23
  repeated seeAlso Uriorcurie = 24
  optional deprecatedElementHasExactReplacement Uriorcurie = 25
  optional deprecatedElementHasPossibleReplacement Uriorcurie = 26
  optional abstract Boolean = 27
  optional mixin Boolean = 28
  repeated valuesFrom Uriorcurie = 29
  optional createdBy Uriorcurie = 30
  optional createdOn Datetime = 31
  optional lastUpdatedOn Datetime = 32
  optional modifiedBy Uriorcurie = 33
  optional status Uriorcurie = 34
  optional stringSerialization String = 35
  repeated slots SlotDefinition = 36
  repeated slotUsage SlotDefinition = 37
  repeated attributes SlotDefinition = 38
  optional classUri Uriorcurie = 39
  optional subclassOf Uriorcurie = 40
  repeated unionOf ClassDefinition = 41
  repeated definingSlots SlotDefinition = 42
  optional treeRoot Boolean = 43
  optional isA ClassDefinition = 44
  repeated mixins ClassDefinition = 45
  repeated applyTo ClassDefinition = 46
 }
// List of values that constrain the range of a slot
message EnumDefinition
 {
  name String = 1
  repeated idPrefixes Ncname = 2
  optional definitionUri Uriorcurie = 3
  repeated aliases String = 4
  repeated localNames LocalName = 5
  repeated mappings Uriorcurie = 6
  repeated exactMappings Uriorcurie = 7
  repeated closeMappings Uriorcurie = 8
  repeated relatedMappings Uriorcurie = 9
  repeated narrowMappings Uriorcurie = 10
  repeated broadMappings Uriorcurie = 11
  repeated extensions Extension = 12
  repeated annotations Annotation = 13
  optional description String = 14
  repeated altDescriptions AltDescription = 15
  optional deprecated String = 16
  repeated todos String = 17
  repeated notes String = 18
  repeated comments String = 19
  repeated examples Example = 20
  repeated inSubset SubsetDefinition = 21
  optional fromSchema Uri = 22
  optional importedFrom String = 23
  repeated seeAlso Uriorcurie = 24
  optional deprecatedElementHasExactReplacement Uriorcurie = 25
  optional deprecatedElementHasPossibleReplacement Uriorcurie = 26
  optional codeSet Uriorcurie = 27
  optional codeSetTag String = 28
  optional codeSetVersion String = 29
  optional pvFormula PvFormulaOptions = 30
  repeated permissibleValues PermissibleValue = 31
 }
// usage example and description
message Example
 {
  optional value String = 1
  optional description String = 2
 }
// a tag/value pair used to add non-model information to an entry
message Extension
 {
  tag Uriorcurie = 1
  value String = 2
  repeated extensions Extension = 3
 }
// an attributed label
message LocalName
 {
  optional localNameSource Ncname = 1
  localNameValue String = 2
 }
// a permissible value, accompanied by intended text and an optional mapping to a concept URI
message PermissibleValue
 {
  text String = 1
  optional description String = 2
  optional meaning Uriorcurie = 3
  optional isA PermissibleValue = 4
  repeated mixins PermissibleValue = 5
  repeated extensions Extension = 6
  repeated annotations Annotation = 7
  repeated altDescriptions AltDescription = 8
  optional deprecated String = 9
  repeated todos String = 10
  repeated notes String = 11
  repeated comments String = 12
  repeated examples Example = 13
  repeated inSubset SubsetDefinition = 14
  optional fromSchema Uri = 15
  optional importedFrom String = 16
  repeated seeAlso Uriorcurie = 17
  optional deprecatedElementHasExactReplacement Uriorcurie = 18
  optional deprecatedElementHasPossibleReplacement Uriorcurie = 19
 }
// prefix URI tuple
message Prefix
 {
  optional prefixPrefix Ncname = 1
  prefixReference Uri = 2
 }
// a collection of subset, type, slot and class definitions
message SchemaDefinition
 {
  repeated idPrefixes Ncname = 1
  optional definitionUri Uriorcurie = 2
  repeated aliases String = 3
  repeated localNames LocalName = 4
  repeated mappings Uriorcurie = 5
  repeated exactMappings Uriorcurie = 6
  repeated closeMappings Uriorcurie = 7
  repeated relatedMappings Uriorcurie = 8
  repeated narrowMappings Uriorcurie = 9
  repeated broadMappings Uriorcurie = 10
  repeated extensions Extension = 11
  repeated annotations Annotation = 12
  optional description String = 13
  repeated altDescriptions AltDescription = 14
  optional deprecated String = 15
  repeated todos String = 16
  repeated notes String = 17
  repeated comments String = 18
  repeated examples Example = 19
  repeated inSubset SubsetDefinition = 20
  optional fromSchema Uri = 21
  optional importedFrom String = 22
  repeated seeAlso Uriorcurie = 23
  optional deprecatedElementHasExactReplacement Uriorcurie = 24
  optional deprecatedElementHasPossibleReplacement Uriorcurie = 25
  id Uri = 26
  optional title String = 27
  optional version String = 28
  repeated imports Uriorcurie = 29
  optional license String = 30
  repeated prefixes Prefix = 31
  repeated emitPrefixes Ncname = 32
  repeated defaultCuriMaps String = 33
  optional defaultPrefix String = 34
  optional defaultRange TypeDefinition = 35
  repeated subsets SubsetDefinition = 36
  repeated types TypeDefinition = 37
  repeated enums EnumDefinition = 38
  repeated slots SlotDefinition = 39
  repeated classes ClassDefinition = 40
  optional metamodelVersion String = 41
  optional sourceFile String = 42
  optional sourceFileDate Datetime = 43
  optional sourceFileSize Integer = 44
  optional generationDate Datetime = 45
  name Ncname = 46
 }
// the definition of a property or a slot
message SlotDefinition
 {
  name String = 1
  repeated idPrefixes Ncname = 2
  optional definitionUri Uriorcurie = 3
  repeated aliases String = 4
  repeated localNames LocalName = 5
  repeated mappings Uriorcurie = 6
  repeated exactMappings Uriorcurie = 7
  repeated closeMappings Uriorcurie = 8
  repeated relatedMappings Uriorcurie = 9
  repeated narrowMappings Uriorcurie = 10
  repeated broadMappings Uriorcurie = 11
  repeated extensions Extension = 12
  repeated annotations Annotation = 13
  optional description String = 14
  repeated altDescriptions AltDescription = 15
  optional deprecated String = 16
  repeated todos String = 17
  repeated notes String = 18
  repeated comments String = 19
  repeated examples Example = 20
  repeated inSubset SubsetDefinition = 21
  optional fromSchema Uri = 22
  optional importedFrom String = 23
  repeated seeAlso Uriorcurie = 24
  optional deprecatedElementHasExactReplacement Uriorcurie = 25
  optional deprecatedElementHasPossibleReplacement Uriorcurie = 26
  optional abstract Boolean = 27
  optional mixin Boolean = 28
  repeated valuesFrom Uriorcurie = 29
  optional createdBy Uriorcurie = 30
  optional createdOn Datetime = 31
  optional lastUpdatedOn Datetime = 32
  optional modifiedBy Uriorcurie = 33
  optional status Uriorcurie = 34
  optional stringSerialization String = 35
  optional singularName String = 36
  optional domain ClassDefinition = 37
  optional range Element = 38
  optional slotUri Uriorcurie = 39
  optional multivalued Boolean = 40
  optional inherited Boolean = 41
  optional readonly String = 42
  optional ifabsent String = 43
  optional required Boolean = 44
  optional recommended Boolean = 45
  optional inlined Boolean = 46
  optional inlinedAsList Boolean = 47
  optional key Boolean = 48
  optional identifier Boolean = 49
  optional designatesType Boolean = 50
  optional alias String = 51
  optional owner Definition = 52
  repeated domainOf ClassDefinition = 53
  optional subpropertyOf SlotDefinition = 54
  optional symmetric Boolean = 55
  optional inverse SlotDefinition = 56
  optional isClassField Boolean = 57
  optional role String = 58
  optional isUsageSlot Boolean = 59
  optional usageSlotName String = 60
  optional minimumValue Integer = 61
  optional maximumValue Integer = 62
  optional pattern String = 63
  optional isA SlotDefinition = 64
  repeated mixins SlotDefinition = 65
  repeated applyTo SlotDefinition = 66
 }
// the name and description of a subset
message SubsetDefinition
 {
  name String = 1
  repeated idPrefixes Ncname = 2
  optional definitionUri Uriorcurie = 3
  repeated aliases String = 4
  repeated localNames LocalName = 5
  repeated mappings Uriorcurie = 6
  repeated exactMappings Uriorcurie = 7
  repeated closeMappings Uriorcurie = 8
  repeated relatedMappings Uriorcurie = 9
  repeated narrowMappings Uriorcurie = 10
  repeated broadMappings Uriorcurie = 11
  repeated extensions Extension = 12
  repeated annotations Annotation = 13
  optional description String = 14
  repeated altDescriptions AltDescription = 15
  optional deprecated String = 16
  repeated todos String = 17
  repeated notes String = 18
  repeated comments String = 19
  repeated examples Example = 20
  repeated inSubset SubsetDefinition = 21
  optional fromSchema Uri = 22
  optional importedFrom String = 23
  repeated seeAlso Uriorcurie = 24
  optional deprecatedElementHasExactReplacement Uriorcurie = 25
  optional deprecatedElementHasPossibleReplacement Uriorcurie = 26
 }
// A data type definition.
message TypeDefinition
 {
  name String = 1
  repeated idPrefixes Ncname = 2
  optional definitionUri Uriorcurie = 3
  repeated aliases String = 4
  repeated localNames LocalName = 5
  repeated mappings Uriorcurie = 6
  repeated exactMappings Uriorcurie = 7
  repeated closeMappings Uriorcurie = 8
  repeated relatedMappings Uriorcurie = 9
  repeated narrowMappings Uriorcurie = 10
  repeated broadMappings Uriorcurie = 11
  repeated extensions Extension = 12
  repeated annotations Annotation = 13
  optional description String = 14
  repeated altDescriptions AltDescription = 15
  optional deprecated String = 16
  repeated todos String = 17
  repeated notes String = 18
  repeated comments String = 19
  repeated examples Example = 20
  repeated inSubset SubsetDefinition = 21
  optional fromSchema Uri = 22
  optional importedFrom String = 23
  repeated seeAlso Uriorcurie = 24
  optional deprecatedElementHasExactReplacement Uriorcurie = 25
  optional deprecatedElementHasPossibleReplacement Uriorcurie = 26
  optional typeof TypeDefinition = 27
  optional base String = 28
  optional uri Uriorcurie = 29
  optional repr String = 30
 }
// a collection of slots whose values uniquely identify an instance of a class
message UniqueKey
 {
  repeated uniqueKeySlots SlotDefinition = 1
  repeated extensions Extension = 2
  repeated annotations Annotation = 3
 }

